--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@shopify/react-native-skia": "^1.2.3",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-reanimated": "^3.11.0",
     "yarn": "^1.22.22"
   },
